v0.0.x changelog:
 * Spritesheetize / Tilesetize now supports upscaling of the output image
	* Upscaling upscales whole result, including spacing and offsets
	* JSONs are adjusted

v0.0.3 changelog:
 * Updated Tile Preview plugin
	* Features distinct render modes
	* Manual refresh due to performance issues
	* Background color is based off brush background color
	* Preview is zoomable

v0.0.2 changelog:
 * Unified Spritesheetize and Tilesetize into singlar plugin (pixel-art-exporter folder)
 * Added display for current animation frame in Animation preview
 * Fixed zoom level reseting when changing animation clips in Animation preview

v0.0.1 changelog
 * Initial version